applied spotless, cleanup